--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -8,7 +8,7 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+  <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
@@ -40,9 +40,9 @@
       <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#/">主页</a></li>
-          <li><a ng-href="#/about">关于易班</a></li>
-          <li><a ng-href="#/">联系我们</a></li>
+          <li class="mainpage"><a href="#/">主页</a></li>
+          <li class="about"><a ng-href="#/about">关于易班</a></li>
+          <li class="contact"><a ng-href="#/contact">联系我们</a></li>
         </ul>
       </div>
     </div>
@@ -53,11 +53,11 @@
   <div ng-view=""></div>
 </div>
 
-<div class="footer">
+<footer class="footer">
   <div class="container">
-    <p><span class="glyphicon glyphicon-heart"></span>UPC易班 <a href="http://yb.upc.edu.cn/blog">技术部</a></p>
+    <p style="text-align: center"><span class="glyphicon glyphicon-heart"></span>UPC易班 <a href="http://yb.upc.edu.cn/blog">技术部</a></p>
   </div>
-</div>
+</footer>
 
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -92,6 +92,7 @@
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/about.js"></script>
 <script src="scripts/controllers/result.js"></script>
+<script src="scripts/controllers/contact.js"></script>
 <!-- endbuild -->
 </body>
 </html>
