--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -24,7 +24,7 @@
 <!-- Add your site or application content here -->
 
 <div class="header" style="border-bottom: none">
-  <div class="navbar navbar-default " role="navigation" style="background: none;border: none">
+  <div class="navbar navbar-default " role="navigation" style="border: none">
     <div class="container" >
       <div class="navbar-header">
 
@@ -35,7 +35,7 @@
           <span class="icon-bar"></span>
         </button>
 
-        <a class="navbar-brand" href="#/">宿舍查询</a>
+        <a class="navbar-brand" href="#/" >宿舍查询</a>
       </div>
 
       <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -54,9 +54,9 @@
   <div ng-view=""></div>
 </div>
 
-<footer class="footer" style="border-top: none;color: aliceblue">
+<footer class="footer" style="border-top: none;color:black">
   <div class="container">
-    <p style="text-align: center"><span class="glyphicon glyphicon-heart"></span>UPC易班 <a href="http://yb.upc.edu.cn/blog"  style="color: aliceblue">技术部</a></p>
+    <p style="text-align: center"><span class="glyphicon glyphicon-heart"></span>UPC易班 <a href="http://yb.upc.edu.cn/blog"  style="color: black">技术部</a></p>
   </div>
 </footer>
 
